[WebUI] Fix overlapping dropdown and autocomplete

--- a/src/Utilities/BinExplorer/WebUI/css/b2r2.css
+++ b/src/Utilities/BinExplorer/WebUI/css/b2r2.css
@@ -145,6 +145,8 @@ body {
   width: 100%;
   height: 100%;
   background: var(--background);
+  position: relative;
+  z-index: 0;
   display: flex; }
   #id_MainContainer #id_GraphShow {
     width: 100%;
@@ -162,6 +164,7 @@ body {
   top: 0;
   height: 55px;
   width: 100%;
+  z-index: 1;
   background: var(--nav); }
   .fixed-navbar-top .logo-image {
     height: 55px;
@@ -487,7 +490,7 @@ body {
 
 .internel-autocomplete-container {
   position: absolute;
-  top: 100px;
+  top: 40px;
   right: 20px;
   display: none;
 }
